fix bug repo and jwt_service